# flutter_ledger_lib

./: .gitignore  .pubignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/macos/: Podfile
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: flutter_ledger_lib.dart
lib/src/: bindings.dart  bindings.g.dart  ffi_utils.dart
lib/src/extension/: uint_extension.dart
lib/src/transport/: ledger_device.dart  ledger_response.dart  ledger_transport.dart  status_word.dart
macos/: flutter_ledger_lib.podspec  libflutter_ledger_lib.dylib  libflutter_ledger_lib_x86_64.dylib
macos/Classes/: FlutterLedgerLibPlugin.h  FlutterLedgerLibPlugin.swift
rust/: Cargo.toml  makefile
rust/src/: lib.rs  models.rs
rust/src/ledger_hid/: ledger_hid_transport.rs  mod.rs
windows/: CMakeLists.txt  flutter_ledger_lib_plugin.cpp  flutter_ledger_lib_plugin.h  flutter_ledger_lib_plugin_c_api.cpp
windows/include/flutter_ledger_lib/: flutter_ledger_lib_plugin_c_api.h
